--- a/styles/styles.css
+++ b/styles/styles.css
@@ -45,6 +45,7 @@ nav {
     border: 2px solid black;*/
     margin-bottom: 100px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+    border-radius: 5px;
 }
 
 nav ul {
@@ -118,12 +119,13 @@ dl {
 }
 
 dt {
+    font-size: 1.2em;
     float: left;
     clear: left;
     width: 100px;
     text-align: right;
     font-weight: bold;
-    color: green;
+    color: black;
 }
 
 dt::after {
