--- a/styles/styles.css
+++ b/styles/styles.css
@@ -113,6 +113,11 @@ footer h1 {
     transform: scale(0.98);
 }
 
+.solveIt:focus {
+    outline: none;
+    box-shadow: 0 0 0 2px lightskyblue;
+}
+
 dl {
     border: 3px double #ccc;
     padding: 0.5em;
