--- a/styles/styles.css
+++ b/styles/styles.css
@@ -151,20 +151,12 @@ dd {
     width: 100%;
     height: calc(1.45rem + 2px);
     padding: 0.375rem 0.75rem;
-    font-family: inherit;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    background-color: #fff;
+    margin-bottom: 0.25rem;
     background-clip: padding-box;
-    border: 1px solid #bdbdbd;
-    border-radius: 0.25rem;
-    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    transition: box-shadow 0.15s ease-in-out;
 }
 
 .numberInput:focus {
-    background-color: #fff;
-    border-color: #bdbdbd;
     outline: 0;
     box-shadow: 0 0 0 0.2rem rgba(158, 158, 158, 0.25);
 }
