--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,9 +1,9 @@
 body {
-    width: 70%;
-    min-width: 800px;
+    max-width: 70%;
     margin: 0 auto;
     background-color: white;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
     text-align: center;
 }
 
@@ -13,7 +13,7 @@ h1 {
 }
 
 h1+p {
-    font-size: 1.3em;
+    font-size: 1.5em;
     line-height: 200%;
 }
 
@@ -38,7 +38,7 @@ li a:hover {
 }
 
 nav {
-    height: 70px;
+    height: 80px;
     flex: 100%;
     display: flex;
     margin-bottom: 100px;
@@ -64,6 +64,7 @@ nav li {
 footer {
     text-align: left;
     margin-top: 130px;
+    font-size: 16px;
 }
 
 footer h1 {
@@ -75,16 +76,17 @@ footer h1 {
 }
 
 .rights {
+    font-size: 17px;
     color: rgba(0, 0, 0, 0.55);
 }
 
-
-
 .solveIt {
     background-color: #e9e9e9;
-    width: 30%;
-    font-size: 1rem;
+    width: 20%;
+    font-size: 1.3rem;
+    margin-bottom: 1rem;
     line-height: 1.5;
+    border-width: 3px;
     border-radius: 10px;
     transition: all 0.1s ease-in-out;
 }
@@ -104,15 +106,18 @@ footer h1 {
 }
 
 dl {
+    width: 90%;
+    margin: 0% auto;
     border: 3px double #ccc;
     padding: 0.5em;
+    padding-left: 2em;
 }
 
 dt {
     font-size: 1.2em;
     float: left;
     clear: left;
-    width: 100px;
+    max-width: 100px;
     text-align: right;
     font-weight: bold;
     color: black;
@@ -124,6 +129,7 @@ dt::after {
 
 dd {
     margin: 0 0 0 110px;
+    font-size: 1.1em;
     padding: 0 0 0.5em 0;
 }
 
@@ -132,11 +138,12 @@ dd {
 }
 
 .numberInput {
-    width: 20%;
-    height: calc(1.45rem + 2px);
+    max-width: 20%;
+    height: 30px;
+    /*height: calc(1.45rem + 2px);*/
     padding: 0.375rem 0.75rem;
     font-family: inherit;
-    font-size: 1rem;
+    font-size: 1.5rem;
     line-height: 1.5;
     border: 1px solid #bdbdbd;
     border-radius: 0.25rem;
@@ -148,4 +155,135 @@ dd {
 .numberInput:focus {
     outline: 0;
     box-shadow: 0 0 0 0.2rem rgba(158, 158, 158, 0.25);
+}
+
+@media (max-width:1600px) {
+    body {
+        font-size: 16px;
+    }
+
+    nav {
+        height: 70px;
+    }
+
+    footer {
+        font-size: 14px;
+    }
+
+    .solveIt {
+        font-size: 1.1em;
+        border-width: 2px;
+    }
+
+    .numberInput {
+        font-size: 1.2rem;
+        height: 25px;
+    }
+}
+
+@media (max-width:1200px) {
+    body {
+        font-size: 13px;
+    }
+
+    nav {
+        height: 60px;
+    }
+
+    footer {
+        font-size: 11px;
+    }
+
+    .solveIt {
+        font-size: 1.3em;
+        border-width: 2px;
+        width: 40%;
+        height: 35px;
+    }
+
+    .numberInput {
+        font-size: 1.2rem;
+        height: 25px;
+    }
+
+    .rights {
+        font-size: 13px;
+    }
+}
+
+@media (max-width:998px) {
+    body {
+        font-size: 11px;
+        max-width: 80%;
+    }
+
+    nav {
+        height: 50px;
+    }
+
+    .solveIt {
+        font-size: 1.3em;
+        border-width: 2px;
+        width: 40%;
+        height: 35px;
+    }
+
+    .numberInput {
+        font-size: 1rem;
+        height: 15px;
+    }
+
+    footer {
+        font-size: 10px;
+    }
+
+    .rights {
+        font-size: 1.2em;
+    }
+}
+
+@media (max-width:768px) {
+    body {
+        max-width: 90%;
+    }
+}
+
+@media (max-width:576px) {
+    body {
+        font-size: 8px;
+        max-width: 95%;
+    }
+
+    nav {
+        font-size: 1.2em;
+        height: 50px;
+    }
+
+    .solveIt {
+        font-size: 1.8em;
+        border-width: 2px;
+        width: 40%;
+        height: 35px;
+    }
+
+    .numberInput {
+        font-size: 1rem;
+        height: 15px;
+    }
+
+    dt {
+        font-size: 1.5em;
+    }
+
+    dd {
+        font-size: 1.5em;
+    }
+
+    footer {
+        font-size: 10px;
+    }
+
+    .rights {
+        font-size: 1.2em;
+    }
 }
