--- a/styles/styles.css
+++ b/styles/styles.css
@@ -140,7 +140,6 @@ dd {
 .numberInput {
     max-width: 20%;
     height: 30px;
-    /*height: calc(1.45rem + 2px);*/
     padding: 0.375rem 0.75rem;
     font-family: inherit;
     font-size: 1.5rem;
@@ -255,7 +254,7 @@ dd {
     }
 
     nav {
-        font-size: 1.2em;
+        font-size: 1.5em;
         height: 50px;
     }
 
@@ -277,6 +276,10 @@ dd {
 
     dd {
         font-size: 1.5em;
+    }
+
+    .numberInput {
+        max-width: 40%;
     }
 
     footer {
